--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
+html,
+body,
+#root {
+  height: 100%;
+}
 body {
+  overflow: hidden;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
